--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.1.1",
     "devtools-sprintf-js": "^1.0.3",
     "extract-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "postcss-url-mapper": "^1.2.0",
     "prop-types": "^15.7.2",
