--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "raw-loader": "^4.0.1",
     "react-transition-group": "^2.0.1",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
