--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.10.1",
     "@babel/plugin-transform-flow-strip-types": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@fullstory/babel-plugin-annotate-react": "^2.0.0",
     "@fullstory/browser": "^1.4.4",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
