--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix src"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.10.1",
