WIP: setup jest

--- a/package.json
+++ b/package.json
@@ -4,28 +4,37 @@
   "description": "Web app with developer tools built on the Record Replay Protocol",
   "main": "postcss.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack-dev-server --open",
     "lint": "eslint --fix src"
   },
   "dependencies": {
     "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.10.1",
     "@babel/plugin-transform-flow-strip-types": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
     "@fullstory/babel-plugin-annotate-react": "^2.0.0",
     "@fullstory/browser": "^1.4.4",
     "@sentry/apm": "^5.21.1",
     "@sentry/react": "^5.21.1",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "classnames": "^2.2.6",
+    "codemirror": "^5.57.0",
     "css-loader": "^3.5.3",
     "debug": "^4.1.1",
+    "devtools-components": "^0.6.0",
+    "devtools-environment": "0.0.6",
+    "devtools-launchpad": "0.0.161",
+    "devtools-modules": "1.1.9",
     "devtools-services": "0.0.3",
+    "devtools-source-map": "^0.16.0",
     "devtools-sprintf-js": "^1.0.3",
     "extract-loader": "^5.0.1",
+    "lodash-move": "^1.1.1",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "parse-script-tags": "^0.1.6",
@@ -36,6 +45,7 @@
     "properties-parser": "^0.3.1",
     "raw-loader": "^4.0.1",
     "react": "^16.8.6",
+    "react-aria-components": "0.0.4",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
     "react-redux": "^5.0.7",
@@ -43,18 +53,25 @@
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "workerjs": "github:jasonLaster/workerjs#1944c8b753cc9e84b6ed0cb2fbcaa25600706446"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^7.3.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "jest": "^26.4.1",
+    "jest-serializer-babel-ast": "0.0.5",
     "webpack-dev-server": "^3.11.0"
   },
   "browserslist": [
