Update test config

--- a/package.json
+++ b/package.json
@@ -23,17 +23,11 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "classnames": "^2.2.6",
-    "codemirror": "^5.57.0",
     "css-loader": "^3.5.3",
     "debug": "^4.1.1",
-    "devtools-environment": "0.0.6",
-    "devtools-launchpad": "0.0.161",
-    "devtools-modules": "1.1.9",
     "devtools-services": "0.0.3",
-    "devtools-source-map": "^0.16.0",
     "devtools-sprintf-js": "^1.0.3",
     "extract-loader": "^5.0.1",
-    "lodash-move": "^1.1.1",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "parse-script-tags": "^0.1.6",
@@ -44,16 +38,12 @@
     "properties-parser": "^0.3.1",
     "raw-loader": "^4.0.1",
     "react": "^16.8.6",
-    "react-aria-components": "0.0.4",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
     "react-redux": "^5.0.7",
     "react-transition-group": "^2.0.1",
     "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "workerjs": "github:jasonLaster/workerjs#1944c8b753cc9e84b6ed0cb2fbcaa25600706446"
+    "url-loader": "^4.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -71,6 +61,9 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "jest": "^26.4.1",
     "jest-serializer-babel-ast": "0.0.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "workerjs": "github:jasonLaster/workerjs#1944c8b753cc9e84b6ed0cb2fbcaa25600706446",
     "webpack-dev-server": "^3.11.0"
   },
   "browserslist": [
