--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,14 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install NPM cache
-        uses: c-hive/gha-npm-cache@v1
-      - name: Install JS dependencies
+      - name: Install Deps
         run: npm install
-      - uses: hallee/eslint-action@1.0.3
-        # GITHUB_TOKEN in forked repositories is read-only
-        # https://help.github.com/en/actions/reference/events-that-trigger-workflows#pull-request-event-pull_request
-        if: ${{ github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository }} 
-        with:
-          repo-token: ${{secrets.GITHUB_TOKEN}}
-          source-root: src
+      - name: Run eslint
+        run: npm run lint 
+#       - name: Install NPM cache
+#         uses: c-hive/gha-npm-cache@v1
+#       - name: Install JS dependencies
+#         run: npm install
+#       - uses: hallee/eslint-action@1.0.3
+#         # GITHUB_TOKEN in forked repositories is read-only
+#         # https://help.github.com/en/actions/reference/events-that-trigger-workflows#pull-request-event-pull_request
+#         if: ${{ github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository }} 
+#         with:
+#           repo-token: ${{secrets.GITHUB_TOKEN}}
+#           source-root: src
