--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           name: replay
           path: replay.dmg
-  test:
+  test0:
     name: Run correctness tests
     runs-on: macos-latest
     needs: [build, download]
@@ -41,10 +41,82 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
       - uses: ./.github/actions/test
+        with:
+          stripe: 0/8
+  test1:
+    name: Run correctness tests
+    runs-on: macos-latest
+    needs: [build, download]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+      - uses: ./.github/actions/test
+        with:
+          stripe: 1/8
+  test2:
+    name: Run correctness tests
+    runs-on: macos-latest
+    needs: [build, download]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+      - uses: ./.github/actions/test
+        with:
+          stripe: 2/8
+  test3:
+    name: Run correctness tests
+    runs-on: macos-latest
+    needs: [build, download]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+      - uses: ./.github/actions/test
+        with:
+          stripe: 3/8
+  test4:
+    name: Run correctness tests
+    runs-on: macos-latest
+    needs: [build, download]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+      - uses: ./.github/actions/test
+        with:
+          stripe: 4/8
+  test5:
+    name: Run correctness tests
+    runs-on: macos-latest
+    needs: [build, download]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+      - uses: ./.github/actions/test
+        with:
+          stripe: 5/8
+  test6:
+    name: Run correctness tests
+    runs-on: macos-latest
+    needs: [build, download]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+      - uses: ./.github/actions/test
+        with:
+          stripe: 6/8
+  test7:
+    name: Run correctness tests
+    runs-on: macos-latest
+    needs: [build, download]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+      - uses: ./.github/actions/test
+        with:
+          stripe: 7/8
   deploy:
     name: Deploy to S3
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test0, test1, test2, test3, test4, test5, test6, test7]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
