--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -1,5 +1,9 @@
 name: "Test"
 description: "Run correctness tests"
+inputs:
+  stripe:
+    description: "Stripe to run, in the form INDEX/TOTAL"
+    required: true
 
 runs:
   using: "node12"
