--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           name: replay
           path: replay.dmg
   test0:
-    name: Run correctness tests
+    name: Test stripe 0
     runs-on: macos-latest
     needs: [build, download]
     steps:
@@ -44,7 +44,7 @@ jobs:
         with:
           stripe: 0/8
   test1:
-    name: Run correctness tests
+    name: Test stripe 1
     runs-on: macos-latest
     needs: [build, download]
     steps:
@@ -54,7 +54,7 @@ jobs:
         with:
           stripe: 1/8
   test2:
-    name: Run correctness tests
+    name: Test stripe 2
     runs-on: macos-latest
     needs: [build, download]
     steps:
@@ -64,7 +64,7 @@ jobs:
         with:
           stripe: 2/8
   test3:
-    name: Run correctness tests
+    name: Test stripe 3
     runs-on: macos-latest
     needs: [build, download]
     steps:
@@ -74,7 +74,7 @@ jobs:
         with:
           stripe: 3/8
   test4:
-    name: Run correctness tests
+    name: Test stripe 4
     runs-on: macos-latest
     needs: [build, download]
     steps:
@@ -84,7 +84,7 @@ jobs:
         with:
           stripe: 4/8
   test5:
-    name: Run correctness tests
+    name: Test stripe 5
     runs-on: macos-latest
     needs: [build, download]
     steps:
@@ -94,7 +94,7 @@ jobs:
         with:
           stripe: 5/8
   test6:
-    name: Run correctness tests
+    name: Test stripe 6
     runs-on: macos-latest
     needs: [build, download]
     steps:
@@ -104,7 +104,7 @@ jobs:
         with:
           stripe: 6/8
   test7:
-    name: Run correctness tests
+    name: Test stripe 7
     runs-on: macos-latest
     needs: [build, download]
     steps:
