--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     name: Build webpack
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -25,6 +26,7 @@ jobs:
   download:
     name: Download replay browser
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Download
         run: wget https://replay.io/downloads/replay.dmg
@@ -37,6 +39,7 @@ jobs:
     name: Test stripe 0
     runs-on: macos-latest
     needs: [build, download]
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -47,6 +50,7 @@ jobs:
     name: Test stripe 1
     runs-on: macos-latest
     needs: [build, download]
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -57,6 +61,7 @@ jobs:
     name: Test stripe 2
     runs-on: macos-latest
     needs: [build, download]
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -67,6 +72,7 @@ jobs:
     name: Test stripe 3
     runs-on: macos-latest
     needs: [build, download]
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -77,6 +83,7 @@ jobs:
     name: Test stripe 4
     runs-on: macos-latest
     needs: [build, download]
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -87,6 +94,7 @@ jobs:
     name: Test stripe 5
     runs-on: macos-latest
     needs: [build, download]
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -97,6 +105,7 @@ jobs:
     name: Test stripe 6
     runs-on: macos-latest
     needs: [build, download]
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -107,6 +116,7 @@ jobs:
     name: Test stripe 7
     runs-on: macos-latest
     needs: [build, download]
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -117,6 +127,7 @@ jobs:
     name: Deploy to S3
     runs-on: ubuntu-latest
     needs: [test0, test1, test2, test3, test4, test5, test6, test7]
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
