--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 #       - uses: actions/checkout@v2
-      - name: Install Deps
-        run: npm install
+#       - name: Install Deps
+#         run: npm install
       - name: eslint + fix
         uses: getsentry/action-eslint-fix@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
