--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,7 +6,7 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-#       - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 #       - name: Install Deps
 #         run: npm install
       - name: eslint + fix
