--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "debug": "^4.1.1",
     "devtools-sprintf-js": "^1.0.3",
     "extract-loader": "^5.0.1",
+    "history": "^5.0.0",
     "lodash": "^4.17.20",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
@@ -41,6 +42,7 @@
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.0.1",
     "redux": "^4.0.5",
     "style-loader": "^1.2.1",
