--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.0.1",
     "redux": "^4.0.5",
     "style-loader": "^1.2.1",
