--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --watch"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.5",
     "@auth0/auth0-react": "^1.0.0",
     "@babel/core": "^7.11.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -20,6 +21,7 @@
     "@fullstory/browser": "^1.4.4",
     "@sentry/apm": "^5.21.1",
     "@sentry/react": "^5.21.1",
+    "apollo-link-http": "^1.5.17",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
@@ -27,6 +29,7 @@
     "debug": "^4.1.1",
     "devtools-sprintf-js": "^1.0.3",
     "extract-loader": "^5.0.1",
+    "graphql": "^15.3.0",
     "lodash": "^4.17.20",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
