--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@sentry/react": "^5.21.1",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-add-react-displayname": "0.0.5",
     "classnames": "^2.2.6",
     "css-loader": "^3.5.3",
     "debug": "^4.1.1",
     "devtools-sprintf-js": "^1.0.3",
     "extract-loader": "^5.0.1",
     "lodash": "^4.17.20",
+    "logrocket": "^1.0.12",
+    "logrocket-react": "^3.0.1",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "parse-script-tags": "^0.1.6",
