--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
+    "react-lottie": "^1.2.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.0.1",
