--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "logrocket-react": "^3.0.1",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "moment": "^2.28.0",
     "parse-script-tags": "^0.1.6",
     "postcss-loader": "^3.0.0",
     "postcss-url-mapper": "^1.2.0",
