bring back the deleted files and exclude them instead

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,5 +75,8 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "src/devtools/client/debugger/src/workers/parser/tests/fixtures/scopes/*"
+  ]
 }
