--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.0.1",
     "redux": "^4.0.5",
+    "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
