--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.0.1",
+    "record-replay-protocol": "git://github.com/RecordReplay/protocol.git",
     "redux": "^4.0.5",
     "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^1.2.1",
