--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   "devDependencies": {
     "@babel/plugin-transform-react-display-name": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "babel-eslint": "^10.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
