--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@apollo/client": "^3.1.5",
     "@auth0/auth0-react": "^1.1.0",
     "@babel/core": "^7.11.6",
+    "@babel/generator": "^7.12.0",
+    "@babel/parser": "^7.12.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@babel/types": "^7.12.0",
     "@sentry/apm": "^5.24.2",
     "@sentry/react": "^5.24.2",
     "apollo-link-http": "^1.5.17",
