--- a/package.json
+++ b/package.json
@@ -58,8 +58,14 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-react-display-name": "^7.10.4",
+    "@babel/preset-env": "^7.12.0",
     "@babel/preset-typescript": "^7.10.4",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-add-react-displayname": "0.0.5",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -68,6 +74,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "jest": "^26.5.3",
+    "jest-localstorage-mock": "^2.4.3",
+    "jest-serializer-babel-ast": "0.0.5",
     "typescript": "^4.0.3",
     "webpack-dev-server": "^3.11.0"
   },
