--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
   "devDependencies": {
     "@babel/plugin-transform-react-display-name": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/logrocket-react": "^3.0.0",
+    "@types/react": "^16.9.55",
+    "@types/react-redux": "^7.1.11",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^7.9.0",
