--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
     "react-transition-group": "^2.0.1",
     "record-replay-protocol": "git://github.com/RecordReplay/protocol.git",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "whatwg-url": "^8.1.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-display-name": "^7.10.4",
