--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/logrocket-react": "^3.0.0",
     "@types/react": "^16.9.55",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.11",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
