--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/types": "^7.12.0",
+    "@recordreplay/protocol": "^0.1.0",
     "@sentry/apm": "^5.24.2",
     "@sentry/react": "^5.24.2",
     "apollo-link-http": "^1.5.17",
@@ -54,7 +55,6 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.0.1",
-    "record-replay-protocol": "git://github.com/RecordReplay/protocol.git",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
