Test sharp module in N-API node test

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
+    "sharp": "^0.27.0",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "utf-8-validate": "^5.0.4",
