--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.1.5",
-    "@auth0/auth0-react": "^1.1.0",
+    "@auth0/auth0-react": "^1.2.0",
     "@babel/core": "^7.11.6",
     "@babel/generator": "^7.12.0",
     "@babel/parser": "^7.12.0",
@@ -35,6 +35,7 @@
     "devtools-sprintf-js": "^1.0.3",
     "extract-loader": "^5.0.1",
     "graphql": "^15.3.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "logrocket": "^1.0.13",
     "logrocket-react": "^3.0.1",
@@ -73,6 +74,7 @@
     "@types/react": "^16.9.55",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^7.9.0",
