--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,10 +1,10 @@
 blank_issues_enabled: false
 contact_links:
   - name: Feature requests
-    url: https://www.notion.so/replayio/5667ebc74ac74db5aecc7fd78939023c?v=bec5bd4f5765478eb99ff76b536c77d7
+    url: https://www.notion.so/replayio/Planning-321adf7736444d398b71d2e378e53381
     about: Share suggestions so we can plan accordingly.
   - name: Product feedback
-    url: https://www.notion.so/replayio/620167e02f754e89b38e5c566fa125e3?v=31e2ffeb26654eedbb142c53e8ada14d
+    url: https://www.notion.so/replayio/Planning-321adf7736444d398b71d2e378e53381
     about: Share feedback so we can incorporate your use cases.
   - name: Comments + Questions
     url: https://discord.gg/hw3eDwvChz
