--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apollo-link-http": "^1.5.17",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "bufferutil": "^4.0.3",
     "classnames": "^2.2.6",
     "codemirror": "^5.58.2",
     "css-loader": "^3.5.3",
