--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
   test0:
     name: Test stripe 0
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -73,7 +73,7 @@ jobs:
   test1:
     name: Test stripe 1
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -84,7 +84,7 @@ jobs:
   test2:
     name: Test stripe 2
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -95,7 +95,7 @@ jobs:
   test3:
     name: Test stripe 3
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -106,7 +106,7 @@ jobs:
   test4:
     name: Test stripe 4
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -117,7 +117,7 @@ jobs:
   test5:
     name: Test stripe 5
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -128,7 +128,7 @@ jobs:
   test6:
     name: Test stripe 6
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -139,7 +139,7 @@ jobs:
   test7:
     name: Test stripe 7
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
