--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
   test0:
     name: Test stripe 0
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -71,7 +71,7 @@ jobs:
   test1:
     name: Test stripe 1
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -82,7 +82,7 @@ jobs:
   test2:
     name: Test stripe 2
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -93,7 +93,7 @@ jobs:
   test3:
     name: Test stripe 3
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -104,7 +104,7 @@ jobs:
   test4:
     name: Test stripe 4
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -115,7 +115,7 @@ jobs:
   test5:
     name: Test stripe 5
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -126,7 +126,7 @@ jobs:
   test6:
     name: Test stripe 6
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -137,7 +137,7 @@ jobs:
   test7:
     name: Test stripe 7
     runs-on: macos-latest
-    needs: [build, download]
+    needs: [build, download-browser, download-node, download-driver]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
