Add new comment UX

--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "apollo-link-http": "^1.5.17",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
     "bufferutil": "^4.0.3",
     "classnames": "^2.2.6",
     "codemirror": "^5.58.2",
     "css-loader": "^3.5.3",
     "debug": "^4.2.0",
     "devtools-sprintf-js": "^1.0.3",
+    "draft-js": "^0.11.7",
     "extract-loader": "^5.0.1",
     "graphql": "^15.3.0",
+    "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "logrocket": "^1.0.13",
