--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^3.5.3",
     "debug": "^4.2.0",
     "devtools-sprintf-js": "^1.0.3",
+    "draft-js": "^0.11.7",
     "extract-loader": "^5.0.1",
     "graphql": "^15.3.0",
     "jwt-decode": "^3.1.2",
