--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src",
     "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc",
-    "typecheck:watch": "npm run typecheck -- --watch"
+    "typecheck:watch": "npm run typecheck -- --watch",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@apollo/client": "^3.1.5",
@@ -32,6 +33,7 @@
     "classnames": "^2.2.6",
     "codemirror": "^5.58.2",
     "css-loader": "^3.5.3",
+    "cypress-real-events": "^1.2.0",
     "debug": "^4.2.0",
     "devtools-sprintf-js": "^1.0.3",
     "draft-js": "^0.11.7",
@@ -81,6 +83,8 @@
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "cypress": "^6.5.0",
+    "cypress-localstorage-commands": "^1.4.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
