--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "framer-motion": "^3.10.0",
     "typescript": "^4.0.3",
     "webpack-dev-server": "^3.11.0",
     "webpack-visualizer-plugin": "^0.1.11"
