--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@recordreplay/protocol": "^0.5.0",
     "@sentry/apm": "^5.27.1",
     "@sentry/react": "^5.30.0",
+    "@types/draft-js": "^0.10.44",
     "apollo-link-http": "^1.5.17",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
