--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/types": "^7.12.0",
+    "@draft-js-plugins/editor": "^4.1.0",
+    "@draft-js-plugins/emoji": "^4.2.0",
     "@recordreplay/protocol": "^0.5.0",
     "@sentry/apm": "^5.27.1",
     "@sentry/react": "^5.30.0",
-    "@types/draft-js": "^0.10.44",
     "apollo-link-http": "^1.5.17",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
@@ -62,6 +63,7 @@
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^2.0.1",
     "redux": "^4.0.5",
+    "remark-emoji": "^2.1.0",
     "reselect": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "sharp": "^0.27.0",
@@ -76,6 +78,7 @@
     "@babel/plugin-transform-react-display-name": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@types/classnames": "^2.2.11",
+    "@types/draft-js": "^0.10.44",
     "@types/lodash": "^4.14.168",
     "@types/logrocket-react": "^3.0.0",
     "@types/react": "^16.9.55",
