--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "classnames": "^2.2.6",
     "codemirror": "^5.58.2",
     "css-loader": "^3.5.3",
+    "date-fns": "^2.19.0",
     "debug": "^4.2.0",
     "devtools-sprintf-js": "^1.0.3",
     "draft-js": "^0.11.7",
@@ -46,7 +47,6 @@
     "logrocket-react": "^3.0.1",
     "md5": "^2.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "moment": "^2.29.0",
     "parse-script-tags": "^0.1.7",
     "postcss-loader": "^3.0.0",
     "postcss-url-mapper": "^1.2.0",
