--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "properties-parser": "^0.3.1",
     "raw-loader": "^4.0.1",
     "react": "^16.8.6",
-    "react-devtools-inline": "^0.0.0-replay-7d9774a385",
+    "react-devtools-inline": "^4.12.0",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
     "react-lottie": "^1.2.3",
