--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@draft-js-plugins/editor": "^4.1.0",
     "@draft-js-plugins/emoji": "^4.2.0",
     "@draft-js-plugins/mention": "^4.3.1",
+    "@headlessui/react": "^1.0.0",
+    "@heroicons/react": "^1.0.1",
     "@recordreplay/protocol": "^0.7.0",
     "@sentry/apm": "^5.27.1",
     "@sentry/react": "^5.30.0",
