--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "devtools-sprintf-js": "^1.0.3",
     "draft-js": "^0.11.7",
     "extract-loader": "^5.0.1",
+    "fontfaceobserver": "^2.1.0",
     "graphql": "^15.3.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
