--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "logrocket-react": "^3.0.1",
     "md5": "^2.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "mixpanel-browser": "^2.41.0",
     "parse-script-tags": "^0.1.7",
     "prettier": "^2.1.1",
     "prop-types": "^15.7.2",
@@ -82,6 +83,7 @@
     "@types/draft-js": "^0.10.44",
     "@types/lodash": "^4.14.168",
     "@types/logrocket-react": "^3.0.0",
+    "@types/mixpanel-browser": "^2.35.6",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.11",
