--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@draft-js-plugins/mention": "^4.3.1",
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
-    "@recordreplay/protocol": "^0.7.0",
+    "@recordreplay/protocol": "^0.8.1",
     "@sentry/react": "^6.3.5",
     "@sentry/tracing": "^6.3.5",
     "@tailwindcss/forms": "^0.3.2",
     "apollo-link-http": "^1.5.17",
     "babel-loader": "^8.1.0",
+    "base64-arraybuffer": "^0.2.0",
     "bufferutil": "^4.0.3",
     "classnames": "^2.2.6",
     "codemirror": "^5.58.2",
