--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
     "@recordreplay/protocol": "^0.7.0",
-    "@sentry/apm": "^5.27.1",
-    "@sentry/react": "^5.30.0",
+    "@sentry/tracing": "^6.3.5",
+    "@sentry/react": "^6.3.5",
     "@tailwindcss/forms": "^0.3.2",
     "apollo-link-http": "^1.5.17",
     "babel-loader": "^8.1.0",
