Update react-devtools-inline to version 4.13.0 (#2285)

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
     "@recordreplay/protocol": "^0.7.0",
-    "@sentry/tracing": "^6.3.5",
     "@sentry/react": "^6.3.5",
+    "@sentry/tracing": "^6.3.5",
     "@tailwindcss/forms": "^0.3.2",
     "apollo-link-http": "^1.5.17",
     "babel-loader": "^8.1.0",
@@ -57,9 +57,9 @@
     "prop-types": "^15.7.2",
     "properties-parser": "^0.3.1",
     "raw-loader": "^4.0.1",
-    "react": "^16.8.6",
-    "react-devtools-inline": "^0.0.0-replay-7d9774a385",
-    "react-dom": "^16.8.6",
+    "react": "0.0.0-experimental-79740da4c",
+    "react-devtools-inline": "^4.13.0",
+    "react-dom": "0.0.0-experimental-79740da4c",
     "react-dom-factories": "^1.0.2",
     "react-markdown": "^5.0.3",
     "react-redux": "^5.0.7",
