--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           name: dist
           path: dist.tgz
+      - uses: actions/checkout@v2
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
   download-browser:
     name: Download replay browser
     runs-on: ubuntu-latest
