Don't run Earthly in CI mode

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Download earthly
         run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.5.11/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
       - name: Build webpack
-        run: "earthly --ci --build-arg REPLAY_RELEASE=$GIT_SHA +dist"
+        run: "earthly --build-arg REPLAY_RELEASE=$GIT_SHA +dist"
         env:
           GIT_SHA: ${{ github.sha }}
       - name: Create artifact
@@ -23,9 +23,6 @@ jobs:
         with:
           name: dist
           path: dist.tgz
-      - uses: actions/checkout@v2
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
   download-browser:
     name: Download replay browser
     runs-on: ubuntu-latest
