deploy: pass git SHA in as input parameter

--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Deploy to S3
         uses: ./.github/actions/deploy
         with:
-          GIT_SHA: ${{ github.sha }}
+          git_sha: ${{ github.sha }}
