--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -1,6 +1,11 @@
 name: "Deploy"
 description: "Deploy to S3"
 
+inputs:
+  git_sha:
+    description: "git SHA of code being deployed"
+    required: true
+
 runs:
   using: "node12"
   main: "./main.js"
