Revert "deploy: pass git SHA in as input parameter"
This reverts commit 6b276742d1e47da9fc8b5d85adc29fbbc2a0e81d.

Revert "deploy: install earthly"

This reverts commit 9f921027d548f300910094756a0dcb4ff63ec159.

Revert "deploy: print error message"

This reverts commit 81a015b6da300088df260cb99b720dffc8010f96.

Revert "s/with/env/g"

This reverts commit 5fe70918309773ae0c6263270642bd126f815e41.

Revert "Convert manual deploy to use Earthly"

This reverts commit fa32daf68c9cd75ca01680a7636b8d5b41b2284f.

Revert "Don't run Earthly in CI mode"

This reverts commit 07c8c427b55e1d34d4debae3c18040fece3260af.

Revert "add tmate for debugging"

This reverts commit 5349f82c36ce211ca49e8abefbb3d329f1367f3c.

Revert "use ubuntu everywhere"

This reverts commit af3426d145e9096b80442bec4206c8b21ac62577.

Revert "build node_modules inside of Earthly"

This reverts commit 217123c27a7196149e29424daed60cbcca952e74.

Revert "use linux to build webpack"

This reverts commit 35c1ae8955af5650a3ddd000fe1307e74505f975.

Revert "use macOS earthly"

This reverts commit 76180118f0a25f20c219242284dd48b2ae4ac4c0.

Revert "upgrade earthly"

This reverts commit a376c2a88b86f85bea3606587afcc35f68aae08e.

Revert "deploy: fix incorrect github actions syntax (#2511)"

This reverts commit 97e0a52f863835a33c50680149186d1e262a6dfd.

Revert "sentry: set release (#2493)"

This reverts commit 29c270af8c7995499fad32e6fd20397034537218.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,17 +7,17 @@ on:
 jobs:
   build:
     name: Build webpack
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Download earthly
-        run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.5.11/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
+      - name: Install Dependencies
+        run: npm install
       - name: Build webpack
-        run: "earthly --build-arg REPLAY_RELEASE=$GIT_SHA +dist"
-        env:
-          GIT_SHA: ${{ github.sha }}
+        run: ./node_modules/.bin/webpack --mode=production
+      - name: Tar up output files
+        run: tar -czf dist.tgz index.html dist node_modules
       - name: Create artifact
         uses: actions/upload-artifact@v2
         with:
@@ -163,5 +163,3 @@ jobs:
           aws-region: us-east-2
       - name: Deploy to S3
         uses: ./.github/actions/deploy
-        with:
-          git_sha: ${{ github.sha }}
