--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -3,6 +3,24 @@ name: Manual Deploy
 on: [workflow_dispatch]
 
 jobs:
+  build:
+    name: Build webpack
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: npm install
+      - name: Build webpack
+        run: ./node_modules/.bin/webpack --mode=production
+      - name: Tar up output files
+        run: tar -czf dist.tgz index.html dist node_modules
+      - name: Create artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist.tgz
   deploy:
     name: Deploy to S3
     runs-on: ubuntu-latest
@@ -16,9 +34,5 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
-      - name: Download earthly
-        run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.5.10/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
       - name: Deploy to S3
         uses: ./.github/actions/deploy
-        with:
-          git_sha: ${{ github.sha }}
