--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,16 +4,16 @@ on: [pull_request, workflow_dispatch]
 
 jobs:
   build:
-    name: Build webpack
-    runs-on: ubuntu-latest
+    name: Build macOS webpack
+    runs-on: macos-latest
     timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Download earthly
-        run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.5.10/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
+      - name: Install dependencies
+        run: npm install
       - name: Build webpack
-        run: "earthly --build-arg GIT_SHA=$GIT_SHA +dist"
+        run: ./node_modules/.bin/webpack --mode=development --env REPLAY_RELEASE=$GIT_SHA
         env:
           GIT_SHA: ${{ github.sha }}
       - name: Create artifact
