--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,9 @@ jobs:
         run: ./node_modules/.bin/webpack --mode=development --env REPLAY_RELEASE=$GIT_SHA
         env:
           GIT_SHA: ${{ github.sha }}
+      - name: Tar up output files
+        run: tar -czf dist.tgz index.html dist node_modules
+
       - name: Create artifact
         uses: actions/upload-artifact@v2
         with:
