--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc",
     "typecheck:watch": "npm run typecheck -- --watch",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "build-cra-e2e-test": "node test/examples/cra/build"
   },
   "dependencies": {
     "@apollo/client": "^3.1.5",
@@ -105,6 +106,7 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
     "framer-motion": "^3.10.0",
+    "fs-extra": "^10.0.0",
     "postcss": "^8.2.9",
     "postcss-loader": "^4.2.0",
     "postcss-url-mapper": "^1.2.0",
