--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "debug": "^4.2.0",
     "devtools-sprintf-js": "^1.0.3",
     "draft-js": "^0.11.7",
+    "escape-html": "^1.0.3",
     "extract-loader": "^5.0.1",
     "fontfaceobserver": "^2.1.0",
     "graphql": "^15.3.0",
@@ -85,6 +86,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/classnames": "^2.2.11",
     "@types/draft-js": "^0.10.44",
+    "@types/escape-html": "^1.0.1",
     "@types/lodash": "^4.14.168",
     "@types/logrocket-react": "^3.0.0",
     "@types/mixpanel-browser": "^2.35.6",
