--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-markdown": "^5.0.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.2.0",
+    "react-tooltip": "^4.2.21",
     "react-transition-group": "^2.0.1",
     "redux": "^4.0.5",
     "remark-emoji": "^2.1.0",
