Add basic intercom tracking

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-router-dom": "^5.2.0",
     "react-tooltip": "^4.2.21",
     "react-transition-group": "^2.0.1",
+    "react-use-intercom": "^1.2.0",
     "redux": "^4.0.5",
     "remark-emoji": "^2.1.0",
     "reselect": "^4.0.0",
