--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "autoprefixer": "^10.2.5",
+    "copy-webpack-plugin": "^6.4.1",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
