--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@draft-js-plugins/mention": "^4.3.1",
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
+    "@recordreplay/playwright": "^1.10.3",
     "@recordreplay/protocol": "^0.8.2",
     "@recordreplay/recordings-cli": "^0.3.1",
     "@sentry/react": "^6.8.0",
@@ -43,6 +44,7 @@
     "date-fns": "^2.19.0",
     "debug": "^4.2.0",
     "devtools-sprintf-js": "^1.0.3",
+    "dotenv": "^10.0.0",
     "draft-js": "^0.11.7",
     "escape-html": "^1.0.3",
     "extract-loader": "^5.0.1",
