Upgrade webpack and some other build dependencies (#3100)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "postcss.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open",
+    "start": "webpack serve --mode=development --open",
     "lint": "eslint src",
     "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc",
@@ -15,14 +15,6 @@
   "dependencies": {
     "@apollo/client": "^3.1.5",
     "@auth0/auth0-react": "^1.2.0",
-    "@babel/core": "^7.11.6",
-    "@babel/generator": "^7.12.0",
-    "@babel/parser": "^7.12.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/types": "^7.12.0",
     "@draft-js-plugins/editor": "^4.1.0",
     "@draft-js-plugins/emoji": "^4.2.0",
     "@draft-js-plugins/mention": "^4.3.1",
@@ -35,19 +27,16 @@
     "@sentry/tracing": "^6.8.0",
     "@tailwindcss/forms": "^0.3.2",
     "apollo-link-http": "^1.5.17",
-    "babel-loader": "^8.1.0",
     "base64-arraybuffer": "^0.2.0",
     "bufferutil": "^4.0.3",
     "classnames": "^2.2.6",
     "codemirror": "^5.58.2",
-    "css-loader": "^3.5.3",
     "date-fns": "^2.19.0",
     "debug": "^4.2.0",
     "devtools-sprintf-js": "^1.0.3",
     "dotenv": "^10.0.0",
     "draft-js": "^0.11.7",
     "escape-html": "^1.0.3",
-    "extract-loader": "^5.0.1",
     "fontfaceobserver": "^2.1.0",
     "graphql": "^15.3.0",
     "jwt-decode": "^3.1.2",
@@ -55,13 +44,11 @@
     "logrocket": "^1.0.13",
     "logrocket-react": "^3.0.1",
     "md5": "^2.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
     "mixpanel-browser": "^2.41.0",
     "parse-script-tags": "^0.1.7",
     "prettier": "^2.1.1",
     "prop-types": "^15.7.2",
     "properties-parser": "^0.3.1",
-    "raw-loader": "^4.0.1",
     "react": "0.0.0-experimental-79740da4c",
     "react-circular-progressbar": "^2.0.4",
     "react-devtools-inline": "^4.13.0",
@@ -78,16 +65,20 @@
     "reselect": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "sharp": "^0.27.0",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
     "utf-8-validate": "^5.0.4",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.11",
     "whatwg-url": "^8.1.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-display-name": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/core": "^7.14.8",
+    "@babel/generator": "^7.14.8",
+    "@babel/parser": "^7.14.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-transform-flow-strip-types": "^7.14.5",
+    "@babel/plugin-transform-react-display-name": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/types": "^7.14.8",
     "@types/classnames": "^2.2.11",
     "@types/draft-js": "^0.10.44",
     "@types/escape-html": "^1.0.1",
@@ -102,7 +93,9 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "autoprefixer": "^10.2.5",
-    "copy-webpack-plugin": "^6.4.1",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
@@ -113,16 +106,22 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "framer-motion": "^3.10.0",
     "fs-extra": "^10.0.0",
-    "postcss": "^8.2.9",
-    "postcss-loader": "^4.2.0",
+    "mini-css-extract-plugin": "^2.1.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
     "postcss-url-mapper": "^1.2.0",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^3.2.1",
     "tailwindcss": "^2.1.1",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.3",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-retry-chunk-load-plugin": "^1.5.0",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "typescript": "^4.3.5",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-retry-chunk-load-plugin": "^2.2.0",
+    "webpack-visualizer-plugin2": "^1.0.0"
   },
   "browserslist": [
     "defaults"
