Use the animated replay logo spinner in place of static logo

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "remark-emoji": "^2.1.0",
     "reselect": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
+    "rive-react": "0.0.20",
     "sharp": "^0.27.0",
     "utf-8-validate": "^5.0.4",
     "whatwg-url": "^9.0.0"
