--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Download
-        run: wget https://replay.io/downloads/replay.dmg
+        run: wget https://static.replay.io/downloads/replay.dmg
       - name: Create artifact
         uses: actions/upload-artifact@v2
         with:
@@ -42,7 +42,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Download
-        run: wget https://replay.io/downloads/macOS-replay-node
+        run: wget https://static.replay.io/downloads/macOS-replay-node
       - name: Create artifact
         uses: actions/upload-artifact@v2
         with:
@@ -54,7 +54,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Download
-        run: wget https://replay.io/downloads/macOS-recordreplay.so
+        run: wget https://static.replay.io/downloads/macOS-recordreplay.so
       - name: Create artifact
         uses: actions/upload-artifact@v2
         with:
@@ -153,5 +153,5 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
-     - uses: actions/checkout@v2
-     - uses: ./.github/actions/mockTest
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/mockTest
